# ga-aem

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT.txt  PostInstall.cmake  PostInstall_dll_to_mexw64.cmake  README-Dependencies.md  README.md  cmake_build_python_bindings.sh  cmake_build_script_examples.sh  cmake_build_script_gadi-gnu.sh  cmake_build_script_gadi-intel.sh  cmake_build_script_gadi.sh  cmake_build_script_ubuntu.sh  cmake_build_script_win10.bat  cmake_build_script_windows-vs2022.bat  cmake_install_script.sh  galei_vars.bat
cmake/: Check-Functions.cmake  Configure-External-Packages.cmake  Configure-FFTW.cmake  Configure-NETCDF_CXX.cmake  Configure-NetCDF_C.cmake  Configure-NetCDF_CXX.cmake  Configure-PETSc-Manual-Setup.cmake  Configure-PETSc.cmake  Create-MSVC-FFTW-Import-Library.cmake  FindNETCDF.cmake  Message-Functions.cmake  Post-Install.cmake  Typical-Compiler-Options.cmake
docs/: README.md
examples/: README.md
examples/ctlinedata-programs/: README.md  ctlinedata2curtainimage-log-stretch-columns.con  ctlinedata2curtainimage-log-stretch-dfn.con  ctlinedata2curtainimage-log-stretch-hdr.con  ctlinedata2curtainimage.bat  ctlinedata2georefimage-linear-stretch-columns.con  ctlinedata2georefimage-linear-stretch.con  ctlinedata2georefimage-log-stretch-columns.con  ctlinedata2georefimage-log-stretch-dfn.con  ctlinedata2georefimage-log-stretch-hdr.con  ctlinedata2georefimage-log-stretch.con  ctlinedata2georefimage.bat  ctlinedata2sgrid-columns.con  ctlinedata2sgrid-dfn.con  ctlinedata2sgrid-hdr.con  ctlinedata2sgrid.bat  ctlinedata2slicegrids-columns.con  ctlinedata2slicegrids-dfn.con  ctlinedata2slicegrids-hdr.con  ctlinedata2slicegrids.bat  ctlinedata2slicegrids.con  splitlines.bat
julia/: README.md  UseGA_AEM.jl  compile_julia_shared_lib.sh  demo_mcmc.jl  demo_mcmc_2p.jl  demo_mcmc_additive.jl  garjmcmctdem-synth.con  garjmcmctdem-txheight.con  gatdaem1d_julia.cpp  gatdaem1d_julia.h  make_synthetic.jl  makesounding.jl  test_gatdaem1d.jl  test_gatdaem1d.sh
julia/GAAEMTools/: Manifest.toml  Project.toml  README.md
julia/cal_line_testing/: Skytem-HM-Menindee-Yancowinna.stm  Skytem-LM-Menindee-Yancowinna.stm  garjmcmctdem-noiseAndNuisance.con  garjmcmctdem.con  noise_level_stats.jl  seq.00001501.200311.610684.900000.nc  synthetic_from_mean.jl
julia/rjmcmctdem_functions/: plot_section.jl  read_rjmcmc_pmap.jl  rjmcmc_pmap_tools.jl  view_rjmcmc_pmap.jl
julia/synthetic_testing/: garjmcmctdem-conductor3pc.con  garjmcmctdem-synth.con  garjmcmctdem-synth2.con  garjmcmctdem-txheight-1.con  garjmcmctdem-txheight-2.con  garjmcmctdem-txheight-3.con  garjmcmctdem-txheight-4.con  garjmcmctdem-txheight.con
makefiles/: README.md  ctlinedata2sgrid.make  ctlinedata2slicegrids.make  example_forward_model.make  example_forward_model_c.make  gaforwardmodeltdem.make  galeiallatonce.make  galeisbsfdem.make  galeisbstdem.make  garjmcmctdem.make  gatdaem1d_c_library.make  gatdaem1d_julia.make  gatdaem1d_matlab.make  gatdaem1d_python.make  raijin_install.sh  raijin_run_make.sh  run_install_gadi.sh  run_install_raijin.sh  run_make.sh  run_make_aegc2019_vm.sh  run_make_centos-vm.sh  run_make_gadi.sh  run_make_raijin.sh  run_make_raijin_matlab.sh  run_make_ubuntu-lts-win10.sh  run_make_ubuntu.sh  run_make_vdi.sh  run_make_vdi_debug.sh  run_python.sh  ubuntu-lts-win10_run_make.sh
makefiles-deprecated/: README.md  ctlinedata2slicegrids.make  example_forward_model_c.make  galeiallatonce.make  garjmcmctdem.make  gatdaem1d_c_library.make  gatdaem1d_matlab.make  gatdaem1d_python.make  removelog10conductivityfromsgrid.make  run_install_gadi.sh  run_tests_ubuntu.sh
matlab/: README.md
matlab/compile/: compile_library.sh  compile_tester.sh  compile_tester_profiling.sh  run_profiling.sh  run_tester.sh
matlab/examples/: check_diagnostics.m  computation_times.m  dark_figure.m  geotem_ppm_forwardmodel.m  get_noise_instance.m  ip_forwardmodel.m  skytem_IP_forwardmodel.m  skytem_derivatives.m  skytem_forwardmodel.m  skytem_forwardmodel_ip.m  skytem_generate_synthetic_data.m  spectrem_fT_forwardmodel.m  spectrem_forwardmodel.m  spectrem_nT_forwardmodel.m  spectrem_ppm_forwardmodel.m  tempest_IP_forwardmodel.m  tempest_derivatives.m  tempest_forwardmodel.m  tempest_nomograms.m  vtem_forwardmodel.m
matlab/gatdaem1d_functions/: gatdaem1d.h  gatdaem1d_amplitudespectrum.m  gatdaem1d_derivative.m  gatdaem1d_derivativestruct.m  gatdaem1d_fm_dlogc.m  gatdaem1d_forwardmodel.m  gatdaem1d_freesystemhandle.m  gatdaem1d_geometrystruct.m  gatdaem1d_getsystemhandle.m  gatdaem1d_headerfile.m  gatdaem1d_libname.m  gatdaem1d_loadlibrary.m  gatdaem1d_nwindows.m  gatdaem1d_responsestruct.m  gatdaem1d_unloadlibrary.m  (+3 more)
python/: Makefile  README.md  gatdaem1d.py  install_package.bat  meson.build  pyproject.toml  run.sh  setup.py  skytem_example.bat  skytem_example.py  skytem_example.sh
python/examples/: skytem_example.bat  skytem_example.py  skytem_example.sh
python/gatdaem1d/: __init__.py  gatdaem1d.exp  gatdaem1d.lib
scripts/: create_import_libararies.bat  create_msvc_fftw_import_libararies.bat  ga-aem_vars.bat  test_ga-aem_paths.bat  test_paths.bat
shellscripts/: split_lines.sh
src/: AAA_copysrc.bat  README.md  airborne_types.h  blocklanguage.cpp  blocklanguage.h  cinverter.h  csbsinverter.h  ctlinedata.h  ctlinedata2curtainimage.cpp  ctlinedata2georefimage.cpp  ctlinedata2sgrid.cpp  ctlinedata2slicegrids.cpp  earth1d.h  example_forward_model.cpp  example_forward_model_c.c  fdemsystem.cpp  fdemsystem.h  fielddefinition.cpp  fielddefinition.h  file_formats.h  file_utils.cpp  file_utils.h  gaaem_version.h  gaforwardmodeltdem.cpp  galeiallatonce.cpp  galeisbsfdem.cpp  galeisbsfdem.h  galeisbstdem.cpp  galeisbstdem.h  garjmcmctdem.cpp  gatdaem1d.cpp  gatdaem1d.h  general_constants.h  general_types.h  general_utils.cpp  general_utils.h  geometry3d.cpp  geometry3d.h  inputmanager.h  inversion_line_searcher.h  (+27 more)
submodules/: README.md
tests/: test_ptrvec.cpp  test_rjmcmc1d.cpp  test_rjmcmc1dtdeminverter.cpp
visualstudio/: README.md  create_package.bat
vs2013/: README.md
(+441 files in other folders)
